<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="developed_by_label">Written by:</string>
    <string name="dialog_about_version">Version:</string>
    <string name="menu_theme_manager">Theme Manager</string>
    <string name="menu_about">About</string>
    <string name="tab_mostdownloaded_themes">Most Downloaded</string>
    <string name="tab_all_themes">All</string>
    <string name="tab_featured_themes">Featured</string>
    <string name="main_no_items">No items to display</string>
    <string name="label_theme_version">Version:</string>
    <string name="label_theme_size">Size:</string>
    <string name="unknown_value">Unknown</string>
    <string name="label_theme_author">Author:</string>
    <string name="label_theme_name">Theme Name:</string>
    <string name="app_name">Theme Downloader</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_please_wait">Please Wait</string>
    <string name="dialog_download_theme_list">Downloading Theme List</string>
    <string name="dialog_download_theme_details">Downloading Theme Details</string>
    <string name="dialog_download_theme">Download Theme</string>
    <string name="dialog_downloading_theme">Downloading %s</string>
    <string name="dialog_downloading_theme_screenshots">Downloading Screenshots</string>
    <string name="about">About</string>
    <string name="ok">OK</string>
    <string name="theme_download_success">Successfully downloaded %s to SD Card.\n\nUse Theme Manager to apply the theme.</string>
    <string name="sd_card_full">%s requires %s free space. SD Card only has %s available. Please free some space and try again.</string>
<string name="update_available">Update Available</string>
<string name="update_available_detail">An update for this application is available!\n\nDownload the update?</string>
<string name="menu_refresh">Refresh</string>
<string name="theme_manager">Theme Manager</string>

<string name="theme_manager_not_found">Theme Manager not installed!</string>
</resources>
