<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/LinearLayout01"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="10px">
              
	<ImageView android:id="@+id/ImageView01"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:src="@drawable/empty_preview_thumb"
	           android:paddingRight="10px" android:maxHeight="167px" android:maxWidth="100px">
	           </ImageView>

	<RelativeLayout android:id="@+id/RelativeLayout01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    
		<TextView android:layout_width="wrap_content"
		          android:layout_height="wrap_content"
		          android:id="@+id/ThemeVersion"
		          android:text="@string/label_theme_version"
		          android:layout_below="@+id/ThemeAuthor">
		          </TextView>
		          
		<TextView android:layout_width="wrap_content"
		          android:layout_height="wrap_content"
		          android:id="@+id/ThemeAuthor"
		          android:text="@string/label_theme_author"
		          android:layout_below="@+id/ThemeName">
		          </TextView>
		
		<TextView android:layout_width="wrap_content"
		          android:layout_height="wrap_content"
		          android:id="@+id/ThemeSize"
		          android:text="@string/label_theme_size"
		          android:layout_below="@+id/ThemeVersion">
		          </TextView>
		
		<TextView android:layout_below="@+id/ThemeSize"
	              android:layout_height="wrap_content"
	              android:layout_width="wrap_content"
	              android:text="@+id/TextView01"
	              android:id="@+id/ThemeURL"
	              android:visibility="gone">
	              </TextView>
	
		<TextView android:layout_width="wrap_content"
		          android:layout_height="wrap_content"
		          android:text="@string/unknown_value"
		          android:textSize="30px"
		          android:id="@+id/ThemeName"
		          android:paddingBottom="10px">
		          </TextView>
	
		<TextView android:layout_width="wrap_content"
		          android:layout_height="wrap_content"
		          android:layout_marginLeft="5px"
		          android:text="@string/unknown_value"
		          android:layout_toRightOf="@+id/ThemeVersion"
		          android:id="@+id/ThemeVersionValue"
		          android:layout_below="@+id/ThemeAuthorValue">
		          </TextView>
	
		<TextView android:layout_width="wrap_content"
		          android:layout_height="wrap_content"
		          android:layout_marginLeft="5px"
		          android:text="@string/unknown_value"
		          android:layout_toRightOf="@+id/ThemeVersion"
		          android:id="@+id/ThemeAuthorValue"
		          android:layout_below="@+id/ThemeName">
		          </TextView>
	
		<TextView android:layout_width="wrap_content"
		          android:layout_height="wrap_content"
		          android:layout_marginLeft="5px"
		          android:text="@string/unknown_value"
		          android:layout_toRightOf="@+id/ThemeVersion"
		          android:id="@+id/ThemeSizeValue"
		          android:layout_below="@+id/ThemeVersionValue">
		          </TextView>

	</RelativeLayout>

</LinearLayout>
